--- a/build.gradle
+++ b/build.gradle
@@ -46,7 +46,7 @@ project(":desktop") {
     apply plugin: "java-library"
 
     dependencies {
-        
+
         implementation project(":core")
 
         //gdx
@@ -62,6 +62,9 @@ project(":desktop") {
         compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.6'
         compile group: 'org.apache.commons', name: 'commons-collections4', version: '4.4'
         compile group: 'commons-io', name: 'commons-io', version: '2.5'
+
+        //阿里fastJson
+        compile group: 'com.alibaba', name: 'fastjson', version: '1.2.83'
 
     }
 
@@ -88,6 +91,9 @@ project(":core") {
         compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.6'
         compile group: 'org.apache.commons', name: 'commons-collections4', version: '4.4'
         compile group: 'commons-io', name: 'commons-io', version: '2.5'
+
+        //阿里fastJson
+        compile group: 'com.alibaba', name: 'fastjson', version: '1.2.83'
 
     }
 }
