--- a/build.gradle
+++ b/build.gradle
@@ -66,6 +66,9 @@ project(":desktop") {
         //阿里fastJson
         compile group: 'com.alibaba', name: 'fastjson', version: '1.2.83'
 
+        //lombok
+        compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.30'
+
     }
 
 }
@@ -94,6 +97,9 @@ project(":core") {
 
         //阿里fastJson
         compile group: 'com.alibaba', name: 'fastjson', version: '1.2.83'
+
+        //lombok
+        compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.30'
 
     }
 }
